# blickfeld-qb2

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  antora-playbook.yml  vcpkg.json
.github/workflows/: cmake.yml
cmake/: CMakeLists.txt  blickfeld-qb2-config.cmake
cpp/: CMakeLists.txt  README.md
cpp/examples/: CMakeLists.txt
cpp/examples/authentication/: CMakeLists.txt  main.cpp
cpp/examples/fetch_content/: CMakeLists.txt  main.cpp
cpp/examples/find_package/: CMakeLists.txt  main.cpp
cpp/examples/vcpkg_msvc/: CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
cpp/include/blickfeld/base/: grpc_defs.h.in
cpp/include/blickfeld/hardware/: client.h
cpp/include/blickfeld/secure/: token_factory.h
data/: CMakeLists.txt
data/tls/: device_ca_cert.pem
doc/: antora.yml
doc/modules/ROOT/: nav.adoc
doc/modules/developer/: nav.adoc
doc/modules/faq/: nav.adoc
doc/modules/foundations/: nav.adoc
doc/modules/guides/: nav.adoc
doc/modules/installation_and_integration/: nav.adoc
protocol/: CMakeLists.txt
protocol/blickfeld/base/: options.proto
protocol/blickfeld/base/config/: geolocation.proto  range.proto
protocol/blickfeld/base/data/: health.proto  version.proto
protocol/blickfeld/base/geometry/: axis.proto  pose.proto  quaternion.proto  shape.proto  transform.proto  vector2.proto  vector3.proto
protocol/blickfeld/base/options/: access_control.proto  lifetime_diagnostics.proto  misc.proto  product_variant.proto  protocol_maturity.proto  validate.proto
protocol/blickfeld/beam_deflection_control/config/: module.proto
protocol/blickfeld/beam_deflection_control/data/: health.proto
protocol/blickfeld/beam_deflection_control/services/: health.proto
protocol/blickfeld/compute_module/data/: health.proto
protocol/blickfeld/compute_module/services/: health.proto
protocol/blickfeld/config/data/: watch_event.proto
protocol/blickfeld/config/services/: storage.proto
protocol/blickfeld/core_processing/config/: demo_recording.proto  health.proto  point_cloud.proto
protocol/blickfeld/core_processing/data/: acceleration.proto  acceleration_buffer.proto  frame.proto  health.proto
protocol/blickfeld/core_processing/services/: acceleration.proto  distortion_correction.proto  health.proto  point_cloud.proto
protocol/blickfeld/detector/data/: health.proto
protocol/blickfeld/detector/services/: health.proto
protocol/blickfeld/diagnostics/: options.proto
protocol/blickfeld/diagnostics/config/: log.proto  self_test.proto  tunnel.proto
protocol/blickfeld/diagnostics/data/: health.proto  log.proto  self_test_report.proto  time_series.proto
protocol/blickfeld/diagnostics/services/: health.proto  log.proto  report.proto  self_test.proto  time_series.proto  tunnel.proto
protocol/blickfeld/eye_safety/data/: pulse_mode.proto
protocol/blickfeld/flow/config/: flow.proto  node_red_json.proto
protocol/blickfeld/flow/services/: credentials.proto  flow.proto  settings.proto
protocol/blickfeld/hardware/config/: identification.proto
protocol/blickfeld/hardware/data/: device_operation.proto  recovery.proto
protocol/blickfeld/hardware/services/: compute_module.proto  device_operation.proto  identification.proto  recovery.proto  serial.proto
protocol/blickfeld/laser/data/: health.proto  mode.proto
protocol/blickfeld/laser/services/: health.proto
protocol/blickfeld/onvif/data/: health.proto
protocol/blickfeld/onvif/services/: health.proto
protocol/blickfeld/percept_pipeline/config/: background_subtraction.proto  classification.proto  clustering.proto  data_source.proto  disqualification.proto  history.proto  object_class.proto  object_size.proto  perception.proto  point_cloud_filter.proto  tracking.proto  zone_algorithm.proto
protocol/blickfeld/percept_pipeline/data/: coordinate_system.proto  health.proto  point_cloud_type.proto  point_type.proto  state.proto
protocol/blickfeld/percept_pipeline/services/: data_source.proto  health.proto  perception.proto  runtime_action.proto  zone.proto
protocol/blickfeld/percept_processing/data/: data_type.proto  detected_object.proto  disqualification.proto  event.proto  flag.proto  health.proto  model_classification.proto  objects.proto  state.proto  state_list.proto  states.proto  vehicle.proto  volume_map.proto
protocol/blickfeld/percept_processing/services/: event.proto  health.proto  history.proto  objects.proto  pipeline.proto  point_cloud.proto  state_list.proto  states.proto  volume_map.proto
protocol/blickfeld/percept_toolkit/data/: health.proto
protocol/blickfeld/percept_toolkit/services/: geometry.proto  health.proto
protocol/blickfeld/push/config/: authentication.proto  destination.proto  payload.proto  push.proto
protocol/blickfeld/push/data/: health.proto  status.proto
protocol/blickfeld/push/services/: destination.proto  health.proto  push.proto
protocol/blickfeld/secure/config/: account.proto  application_key.proto  certificate.proto  device_credentials.proto  firewall.proto  private_key.proto  public_key.proto
protocol/blickfeld/secure/data/: health.proto  license.proto
protocol/blickfeld/secure/services/: account.proto  application_key.proto  authentication.proto  device_credentials.proto  firewall.proto  health.proto  license.proto  session.proto
protocol/blickfeld/system/config/: device.proto  network.proto  scan_pattern.proto  time_synchronization.proto
protocol/blickfeld/system/data/: firmware.proto  health.proto  network_status.proto  scan_pattern.proto
protocol/blickfeld/system/services/: firmware.proto  health.proto  network.proto  scan_pattern.proto  time_synchronization.proto
protocol/blickfeld/toolkit/config/: preset.proto
protocol/blickfeld/toolkit/data/: file.proto  record.proto
protocol/blickfeld/toolkit/services/: event_export.proto  preset.proto  record.proto
protocol/blickfeld/video/config/: visualization.proto
protocol/blickfeld/video/data/: health.proto
protocol/blickfeld/video/services/: health.proto  visualization.proto
(+269 files in other folders)
